--- a/examples/example-angularcli/package.json
+++ b/examples/example-angularcli/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "~9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
     "@angular/router": "~9.1.11",
-    "docx-templates": "*",
+    "docx-templates": "./docx-templates.tgz",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
