#175 Added output filename to command to remove potential source of confusion.

--- a/examples/example-node/package.json
+++ b/examples/example-node/package.json
@@ -22,7 +22,7 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
-    "start": "node . swapi-simple.docx"
+    "start": "node . swapi-simple.docx output.docx"
   },
   "dependencies": {
     "docx-templates": "*",
