🏗️build (browser): add a browserify-based browser build, complete with polyfills.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,9 @@
     },
     "include": [
         "src"
+    ],
+    "exclude": [
+        "src/browser-polyfill.ts",
+        "src/browser.ts",
     ]
 }
