--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
-    "compile": "rimraf ./lib && tsc",
+    "compile": "rimraf ./lib && yarn rollup && tsc",
+    "rollup": "rollup -c",
     "prepack": "yarn compile",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
@@ -36,7 +37,7 @@
     "lint-fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=8.1"
   },
   "dependencies": {
     "jszip": "^3.5.0",
@@ -44,26 +45,37 @@
     "timm": "^1.6.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-replace": "^3.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^15.9.0",
     "@types/qrcode": "^1.3.4",
     "@types/sax": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
+    "buffer": "^6.0.3",
     "coveralls": "^3.0.13",
+    "esbuild": "^0.12.18",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^24.0.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "events": "^3.3.0",
     "jest": "^27.0.4",
     "mockdate": "^3.0.2",
     "nyc": "^15.0.1",
     "prettier": "^2.0.5",
     "qrcode": "^1.4.4",
     "rimraf": "^3.0.2",
+    "rollup": "^2.56.0",
+    "rollup-plugin-esbuild": "^4.5.0",
+    "stream-browserify": "^3.0.0",
     "ts-jest": "^27.0.2",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "util": "^0.12.4",
+    "vm-browserify": "^1.1.2"
   },
   "jest": {
     "transform": {
