--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "@types/sax": "^1.2.1",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
+    "buffer": "^6.0.3",
     "coveralls": "^3.0.13",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jest": "^24.0.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "events": "^3.3.0",
     "jest": "^27.0.4",
     "mockdate": "^3.0.2",
     "nyc": "^15.0.1",
@@ -65,8 +67,11 @@
     "prettier": "^2.0.5",
     "qrcode": "^1.4.4",
     "rimraf": "^3.0.2",
+    "stream-browserify": "^3.0.0",
     "ts-jest": "^27.0.2",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "util": "^0.12.4",
+    "vm-browserify": "^1.1.2"
   },
   "jest": {
     "transform": {
