--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
     "timm": "^1.6.2"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^20.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-replace": "^3.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^15.9.0",
     "@types/qrcode": "^1.3.4",
@@ -54,6 +57,7 @@
     "@typescript-eslint/parser": "^4.1.1",
     "buffer": "^6.0.3",
     "coveralls": "^3.0.13",
+    "esbuild": "^0.12.18",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
@@ -67,6 +71,8 @@
     "prettier": "^2.0.5",
     "qrcode": "^1.4.4",
     "rimraf": "^3.0.2",
+    "rollup": "^2.56.0",
+    "rollup-plugin-esbuild": "^4.5.0",
     "stream-browserify": "^3.0.0",
     "ts-jest": "^27.0.2",
     "typescript": "^4.2.3",
