--- a/.eslintignore
+++ b/.eslintignore
@@ -5,3 +5,5 @@ coverage
 .nyc_tmp
 examples/example-browserify/public/docx-templates.js
 examples/example-webpack/public
+src/browser-polyfill.ts
+src/browser.ts
