Increase jest test timeout for slower test runners.

--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
+    "testTimeout": 10000,
     "testRegex": "src/.*__tests__/.*\\.(test|spec)\\.(ts|tsx)$",
     "coverageDirectory": ".nyc_output",
     "coverageReporters": [
