Minor cleanup of unused exports.

--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -28,6 +28,10 @@ rules:
       peerDependencies: true
       optionalDependencies: false
   import/prefer-default-export: off
+  import/no-unused-modules: 
+    - error
+    - unusedExports: true
+      ignoreExports: ["./src/index.ts"]
   radix: error
   prefer-promise-reject-errors: error
   no-throw-literal: error
