--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
-    "compile": "rimraf ./lib && yarn rollup && tsc",
+    "compile": "rimraf ./lib && tsc && yarn rollup",
     "rollup": "rollup -c",
     "prepack": "yarn compile",
     "travis": "yarn compile && yarn test",
@@ -70,6 +70,7 @@
     "qrcode": "^1.4.4",
     "rimraf": "^3.0.2",
     "rollup": "^2.56.0",
+    "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-esbuild": "^4.5.0",
     "stream-browserify": "^3.0.0",
     "ts-jest": "^27.0.2",
