--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@rollup/plugin-replace": "^3.0.1",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
-    "@types/qrcode": "^1.4.2",
+    "@types/qrcode": "1.4.2",
     "@types/sax": "^1.2.4",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
@@ -67,7 +67,7 @@
     "mockdate": "^3.0.2",
     "nyc": "^15.0.1",
     "prettier": "^2.5.1",
-    "qrcode": "^1.4.4",
+    "qrcode": "1.4.4",
     "rimraf": "^3.0.2",
     "rollup": "^2.64.0",
     "rollup-plugin-dts": "^4.1.0",
