--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1
         with:
-          node-version: "12.x"
+          # Different (newer) node version than the one used for testing, because we don't care about engine compat here.
+          node-version: 16
           registry-url: "https://registry.npmjs.org"
       - run: yarn install --frozen-lockfile
       - run: npm publish
