Use npm dist-tags to publish beta builds based on the tag name.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,8 @@ jobs:
           node-version: 16
           registry-url: "https://registry.npmjs.org"
       - run: yarn install --frozen-lockfile
-      - run: npm publish
+      - run: |
+          TAG=$(echo $GITHUB_REF_NAME | grep -oP '^v\d+\.\d+\.\d+-?\K(\w+)?')
+          npm publish --tag ${TAG:-latest}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
