Replace `prepack` with `prepare` hook to allow install directly from github.

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
     "url": "git+https://github.com/guigrpa/docx-templates.git"
   },
   "scripts": {
+    "prepare": "yarn compile",
     "compile": "rimraf ./lib && tsc && yarn rollup",
     "rollup": "rollup -c",
-    "prepack": "yarn compile",
     "travis": "yarn compile && yarn test",
     "jest": "jest --watch --coverage",
     "test": "yarn lint && yarn testCovFull",
