Remove unnecessary lib (used for basic object manipulation). The deep copying timm provided was not necessary in the few cases it was used.

--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
   },
   "dependencies": {
     "jszip": "^3.5.0",
-    "sax": "1.2.4",
-    "timm": "^1.6.2"
+    "sax": "1.2.4"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
