--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "docx-templates",
-  "version": "4.12.0",
+  "name": "@datanest-earth/docx-templates",
+  "version": "4.12.1-alpha",
   "description": "Template-based docx report creation",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
